# ml-ops

./: pyproject.toml
.dvc/: config
data/raw/: titanic.csv.dvc
ml_app/: README.md  dvc.yaml  requirements-ci.txt  requirements.txt  setup.py
ml_app/src/: clean_data.py  compute_features.py  fit_model.py  main.py
ml_app/tests/: test_clean_data.py
ml_app/tests/data/raw/: titanic.csv
