[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-ops"
description = "MLops demonstration repo"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "dvc[gs]>=3.30.1",
    "mlflow>=2.8.1",
    "numpy>=1.26.2",
    "pandas>=1.3.4",
    "scikit-learn>=1.3.2",
    "statsmodels>=0.14.0"
]

# Hopefully no versions are needed here
[project.optional-dependencies]
ci = [
    "pip-tools",
    "pylint",
    "pytest",
    "black",
]

[tool.setuptools.packages.find]
where = ["ml_app"]
exclude = ["tests"]

[tool.black]
line-length = 99
exclude = '''
/(
    \.git
  | \.mypy_cache
  | venv
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--new-first",
    "--import-mode=importlib",
    "--doctest-modules",
]
pythonpath = [
  "ml_app/src"
]

[tool.pylint.'MESSAGES CONTROL']
disable= """
  missing-docstring,
  invalid-name,
  broad-exception-caught,
  too-many-instance-attributes,
  too-many-arguments,
  fixme,
  global-statement,
  import-error,
  too-few-public-methods
"""
